# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-to-freeze.txt  requirements.txt  template.py
.github/workflows/: readme-update.yml
2020/01/: 2020_01.py
2022/01/: 2022_01.py
2022/day02/: main.py
2022/day03/: main.py
2022/day04/: main.py
2022/day10/: main.py
2022/day11/: main.py
2022/day12/: main.py
2022/day16/: main.py
2022/day17/: main.py
2022/day18/: main.py
2022/day19/: main.py
2022/day24/: main.py
2022/day25/: main.py
day01/: main.py
day06/: main.py
day07/: main.py
day09/: main.py
day18/: input-small.txt  main.py
day21/: main.py
day24/: main.py
src/2015/01/: 2015_01.py  sample_input.txt
src/2016/01/: 2016_01.py  sample_input.txt
src/2017/01/: 2017_01.py  sample_input.txt
src/2018/01/: 2018_01.py  sample_input.txt
src/2019/01/: 2019_01.py  sample_input.txt
src/2019/02/: 2019_02.py  sample_input.txt
src/2020/01/: 2020_01.py  sample_input.txt
src/2020/02/: 2020_02.py  sample_input.txt
src/2020/03/: 2020_03.py  sample_input.txt
src/2021/day01/: main.py  main2.py
src/2021/day02/: main.py
src/2021/day03/: main.py  main2.py
src/2021/day04/: main.py  main2.py
src/2021/day05/: main.py
src/2021/day06/: main.py
src/2021/day07/: main.py
src/2021/day08/: main.py
src/2021/day09/: main.py
src/2021/day10/: main.py
src/2021/day11/: main.py
src/2021/day12/: main.py
src/2021/day13/: main.py
src/2021/day14/: main.py
src/utils/: data.py  submission.py
(+132 files in other folders)
